--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 <!-- la saisie de texte est autorisée puisque l'attribut disabled est omis -->
 <input type="text" />
 <a href=https://www.mozilla.org>mon site web favori</a>
+<a href="http://www.exemple.com" title="N'est-ce pas drôle ?"
+  >Un lien vers mon exemple.</a
+>
+<p>Je ne suis pas dans un commentaire</p>
+
+<!-- <p>Je suis dans un commmentaire!</p> -->
+
+
 
   </body>
 </html>
