--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Chris Mills" />
+<meta
+  name="description"
+  content="La Zone Apprentissage des documents web
+du MDN a pour but de donner aux débutants du Web tout ce qu'ils doivent
+savoir pour commencer le développement de pages webs et d'applications." />
+<meta
+  property="og:image"
+  content="https://developer.mozilla.org/mdn-social-share.png" />
+<meta
+  property="og:description"
+  content="MDN Web Docs fournit des
+informations sur les technologies web ouvertes comme HTML, CSS et les API
+utilisées pour les sites web et les applications web. On y trouve également
+de la documentation destinées aux développeurs à propos des produits
+Mozilla tels que les outils de développement de Firefox." />
+<meta property="og:title" content="Mozilla Developer Network" />
+
     <title>1er_site_mdn</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
+  
+
   <body>
     <p>Mon chat est <strong>très</strong> grincheux</p>
     <em>premier</em><em>deuxième</em><em>troisième</em>
@@ -27,6 +49,59 @@
 <p>Je ne suis pas dans un commentaire</p>
 
 <!-- <p>Je suis dans un commmentaire!</p> -->
+<h1>L'ennui mortel</h1>
+
+<p>par Chris Mills</p>
+
+<h2>Chapitre I : La nuit noire</h2>
+
+<p>
+  Il faisait nuit noire. Quelque part une chouette ululait. La pluie tombait sur
+  ...
+</p>
+
+<h2>Chapitre II : Le silence éternel</h2>
+
+<p>
+  Notre protagoniste ne pouvait même pas murmurer à l'ombre de la silhouette...
+</p>
+
+<h3>Le spectre parle</h3>
+
+<p>
+  Plusieurs heures s'étaient écoulées, quand soudain le spectre assis se releva
+  et s'exclama : « S'il vous plaît, ayez pitié de mon âme ! »...
+</p>
+<span style="font-size: 32px; margin: 21px 0;">Est-ce un titre principal?</span>
+<ol>
+  <li>Roulez jusqu'au bout de la route</li>
+  <li>Tournez à droite</li>
+  <li>Allez tout droit aux deux premiers ronds-points</li>
+  <li>Tournez à gauche au troisième rond-point</li>
+  <li>Roulez sur 300 mètres, l'école est sur votre droite</li>
+</ol>
+<ol>
+  <li>Ôter la peau de l'ail et le hacher grossièrement.</li>
+  <li>Enlever les graines et la tige du poivron, le hacher grossièrement.</li>
+  <li>
+    Mettre tous les ingrédients dans un robot mixer jusqu'à l'obtention d'une
+    pâte.
+  </li>
+  <li>Si vous voulez un houmous grenu, ne le mixez pas trop longtemps.</li>
+  <li>Si vous voulez un houmous lisse, mixez-le plus longtemps.</li>
+</ol>
+<ol>
+  <li>Ôter la peau de l'ail et le hacher grossièrement.</li>
+  <li>Enlever les graines et la tige du poivron, le hacher grossièrement.</li>
+  <li>
+    Mettre tous les ingrédients dans un robot mixer jusqu'à l'obtention d'une
+    pâte.
+    <ul>
+      <li>Si vous voulez un houmous grenu, ne le mixez pas trop longtemps.</li>
+      <li>Si vous voulez un houmous lisse, mixez-le plus longtemps.</li>
+    </ul>
+  </li>
+</ol>
 
 
 
