--- a/index.html
+++ b/index.html
@@ -102,7 +102,53 @@ Mozilla tels que les outils de développement de Firefox." />
     </ul>
   </li>
 </ol>
+<p>Je suis <em>content</em> que vous n'ayez pas été <em>en retard</em>.</p>
+<p>
+  Ce liquide est <strong>hautement toxique</strong> — si vous en buvez,
+  <strong>vous pourriez en <em>mourir</em></strong
+  >.
+</p>
+<!-- noms scientifiques -->
+<p>
+  Le colibri à gorge rouge (<i>Archilochus colubris</i>) est le colibri le plus
+  courant dans l'ouest de l'Amérique du Nord.
+</p>
 
+<!-- mots dans une langue étrangère -->
+<p>Le menu était un océan de mots exotiques comme
+  <i lang="uk-latn">vatrushka</i>, <i lang="id">nasi goreng</i> et
+  <i lang="en">porridge</i>.
+</p>
+
+<!-- une faute d'orthographe connue -->
+<p>
+  Un jour, j'apprendrai comment mieux
+  <u style="text-decoration-line: underline; text-decoration-style: wavy;"
+    >épeler</u
+  >.
+</p>
+
+<!-- Mettre en évidence les mots‑clés dans un ensemble d'instructions -->
+<ol>
+  <li><b>Trancher</b> deux morceaux de pain dans la miche.</li>
+  <li>
+    <b>Mettre</b> une rondelle de tomate et une feuille de laitue entre les deux
+    tranches de pain.
+  </li>
+</ol>
+<p>
+  Je suis en train de créer un lien à
+  <a href="https://www.mozilla.org/fr/">la page d'accueil Mozilla</a>.
+</p>
+<p>
+  Je suis en train de créer un lien à
+  <a
+    href="https://www.mozilla.org/fr/"
+    title="Le meilleur endroit pour trouver plus d'informations sur la
+  mission de Mozilla et la manière de contribuer"
+    >la page d'accueil Mozilla</a
+  >.
+</p>
 
 
   </body>
